# msgtrans-cpp

./: .gitignore  CMakeLists.txt  README.md
examples/client/: chat.message.pb.cc  chat.message.pb.h  main.cpp
include/: CRequest.h  ClientChannel.h  ConnectionBase.h  MessageBuffer.h  MessageTransport.h  MessageTransportClient.h  TransportContext.h  TransportSession.h
include/channel/: Tcp.h  TcpClientChannel.h  TcpTransportSession.h
include/common/: PacketSerizlizer.h  Singleton.h  base64.h
include/ee2e/: common.h  key_exchange.pb.h
include/evpp/: dns_resolver.cc  event_loop_thread_pool.h  logging.h
include/evpp/http/: http_server.h
include/evpp/udp/: udp_server.h
proto/: key_exchange.pb.cc  key_exchange.pb.h  key_exchange.proto
src/: ConnectionBase.cpp  MessageTransport.cpp  MessageTransportClient.cpp  TransportSession.cpp
src/channel/: Tcp.cpp  TcpClientChannel.cpp  TcpTransportSession.cpp
src/common/: PacketSerizlizer.cpp
src/ee2e/: crypto.cpp  key_exchange.pb.cc
